处理警告信息